--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./index.css">
     <title>Document</title>
   </head>
   <body>
@@ -13,12 +14,12 @@
           <h1>Power</h1>
         </div>
 
-        <div>
+        <div class="titulo-container column">
           <h1 class="titulo">300</h1>
           <h2 class="subtitulo">MEGA</h2>
         </div>
 
-        <div>
+        <div class="vantagens">
           <div class="vantagem">
             <img
               src="./assets/img/ícones-serviços/ícone-wifi.png"
@@ -41,7 +42,7 @@
             <p>Downloads Ilimitados</p>
           </div>
           <div class="vantagem">
-            <img src="./assets/img/ícones-serviços/ícone-fibra.png alt="icone
+            <img src="./assets/img/ícones-serviços/ícone-fibra.png" alt="icone
             wifi" />
             <p>Fibra Óptica</p>
           </div>
