--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./index.css" />
     <title>Document</title>
   </head>
   <body>
@@ -15,8 +15,7 @@
         </div>
 
         <div class="titulo-container column">
-          <h1 class="titulo">300</h1>
-          <h2 class="subtitulo">MEGA</h2>
+          <img src="./assets/img/velocidades/300mega.png" alt="300 mega" />
         </div>
 
         <div class="vantagens">
@@ -42,8 +41,11 @@
             <p>Downloads Ilimitados</p>
           </div>
           <div class="vantagem">
-            <img src="./assets/img/ícones-serviços/ícone-fibra.png" alt="icone
-            wifi" />
+            <img
+              src="./assets/img/ícones-serviços/ícone-fibra.png"
+              alt="icone
+            wifi"
+            />
             <p>Fibra Óptica</p>
           </div>
           <div class="vantagem">
