coloca novos tipos de plano

--- a/index.html
+++ b/index.html
@@ -9,7 +9,139 @@
   </head>
   <body>
     <div class="planos-wrapper">
-      <div class="plano">
+      <div class="plano power">
+        <div class="cabecalho">
+          <h1>Power</h1>
+        </div>
+
+        <div class="titulo-container column">
+          <img src="./assets/img/velocidades/300mega.png" alt="300 mega" />
+        </div>
+
+        <div class="vantagens">
+          <div class="vantagem">
+            <img
+              src="./assets/img/ícones-serviços/ícone-wifi.png"
+              alt="icone plano"
+            />
+            <p>Wi-fi Grátis</p>
+          </div>
+          <div class="vantagem">
+            <img
+              src="./assets/img/ícones-serviços/ícone-instalação.png"
+              alt="icone plano"
+            />
+            <p>Instalação Grátis</p>
+          </div>
+          <div class="vantagem">
+            <img
+              src="./assets/img/ícones-serviços/ícone-donwloads.png"
+              alt="icone plano"
+            />
+            <p>Downloads Ilimitados</p>
+          </div>
+          <div class="vantagem">
+            <img
+              src="./assets/img/ícones-serviços/ícone-fibra.png"
+              alt="icone
+            wifi"
+            />
+            <p>Fibra Óptica</p>
+          </div>
+          <div class="vantagem">
+            <img
+              src="./assets/img/ícones-serviços/ícone-apps.png"
+              alt="icone plano"
+            />
+            <p>Apps a escolha*</p>
+          </div>
+        </div>
+
+        <div class="servicos">
+          <img src="./assets/img/apps/mumo.png" alt="icone serviço" />
+          <img src="./assets/img/apps/qualifica.png" alt="icone serviço" />
+          <img src="./assets/img/apps/qualifica.png" alt="icone serviço" />
+        </div>
+
+        <div class="apps">
+          <p>2 Apps Standart</p>
+          <p>(a escolher)</p>
+
+          <div class="icones">
+            <img src="./assets/img/apps/looke.png" />
+            <img src="./assets/img/apps/galinha-pintadinha.png" />
+          </div>
+        </div>
+
+        <button>Contratar</button>
+      </div>
+      <div class="plano infinity">
+        <div class="cabecalho">
+          <h1>Power</h1>
+        </div>
+
+        <div class="titulo-container column">
+          <img src="./assets/img/velocidades/700mega.png" alt="700 mega" />
+        </div>
+
+        <div class="vantagens">
+          <div class="vantagem">
+            <img
+              src="./assets/img/ícones-serviços/ícone-wifi.png"
+              alt="icone plano"
+            />
+            <p>Wi-fi Grátis</p>
+          </div>
+          <div class="vantagem">
+            <img
+              src="./assets/img/ícones-serviços/ícone-instalação.png"
+              alt="icone plano"
+            />
+            <p>Instalação Grátis</p>
+          </div>
+          <div class="vantagem">
+            <img
+              src="./assets/img/ícones-serviços/ícone-donwloads.png"
+              alt="icone plano"
+            />
+            <p>Downloads Ilimitados</p>
+          </div>
+          <div class="vantagem">
+            <img
+              src="./assets/img/ícones-serviços/ícone-fibra.png"
+              alt="icone
+            wifi"
+            />
+            <p>Fibra Óptica</p>
+          </div>
+          <div class="vantagem">
+            <img
+              src="./assets/img/ícones-serviços/ícone-apps.png"
+              alt="icone plano"
+            />
+            <p>Apps a escolha*</p>
+          </div>
+        </div>
+
+        <div class="servicos">
+          <img src="./assets/img/apps/mumo.png" alt="icone serviço" />
+          <img src="./assets/img/apps/qualifica.png" alt="icone serviço" />
+          <img src="./assets/img/apps/qualifica.png" alt="icone serviço" />
+        </div>
+
+        <div class="apps">
+          <p>2 Apps Standart</p>
+          <p>(a escolher)</p>
+
+          <div class="icones">
+            <img src="./assets/img/apps/looke.png" />
+            <img src="./assets/img/apps/galinha-pintadinha.png" />
+          </div>
+        </div>
+
+        <button>Contratar</button>
+      </div>
+      <div class="plano exclusive">
         <div class="cabecalho">
           <h1>Power</h1>
         </div>
